# webgear-example-realworld

./: README.md  flake.nix  hie.yaml  stack.yaml  webgear-example-realworld.cabal
.github/workflows/: ci.yaml
nix/haskell-packages/: doctest-0.20.0.nix  persistent-2.14.5.0.nix  postgresql-simple-0.6.5.nix  webgear-core-1.0.4.nix  webgear-core-1.0.5.nix  webgear-openapi-1.0.4.nix  webgear-openapi-1.0.5.nix  webgear-server-1.0.4.nix  webgear-server-1.0.5.nix
src/: Main.hs
src/API/: Article.hs  Comment.hs  Common.hs  Profile.hs  Tag.hs  UI.hs  User.hs
src/Model/: Article.hs  Comment.hs  Common.hs  User.hs
