cabal-version:       2.4
name:                webgear-example-realworld
version:             1.0.1
description:         Please see the README at <https://github.com/haskell-webgear/webgear-example-realworld#readme>
homepage:            https://github.com/haskell-webgear/webgear-example-realworld#readme
bug-reports:         https://github.com/haskell-webgear/webgear-example-realworld/issues
author:              Raghu Kaippully
maintainer:          rkaippully@gmail.com
copyright:           2020 Raghu Kaippully
license:             MPL-2.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md


source-repository head
  type:      git
  location:  https://github.com/haskell-webgear/webgear-example-realworld

executable realworld
  default-language:   Haskell2010
  build-depends:      aeson >=1.5 && <1.6
                    , base >=4.14.0.0 && <5
                    , bytestring ==0.10.*
                    , cryptonite >=0.29 && <0.30
                    , esqueleto >=3.5 && <3.6
                    , http-api-data ==0.4.*
                    , http-types ==0.12.*
                    , jose >=0.8 && <0.9
                    , lens >=4.19 && <4.20
                    , mime-types >=0.1 && <0.2
                    , monad-logger >=0.3 && <0.4
                    , monad-time >=0.3 && <0.4
                    , mtl ==2.2.*
                    , openapi3 ==3.1.*
                    , persistent >=2.13 && <2.14
                    , persistent-sqlite >=2.13 && <2.14
                    , random >=1.2 && <1.3
                    , relude >=0.7 && <0.8
                    , resource-pool ==0.2.*
                    , safe-exceptions ==0.1.*
                    , text ==1.2.*
                    , time >=1.9 && <1.10
                    , uri-encode ==1.5.*
                    , wai ==3.2.*
                    , warp ==3.3.*
                    , webgear-server ==1.0.1
                    , webgear-openapi ==1.0.1
  default-extensions: Arrows
                      DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      DuplicateRecordFields
                      FlexibleContexts
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      KindSignatures
                      LambdaCase
                      MultiParamTypeClasses
                      NoImplicitPrelude
                      OverloadedStrings
                      QuasiQuotes
                      RecordWildCards
                      ScopedTypeVariables
                      TypeApplications
                      TypeOperators
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -Wall
                      -Wno-unticked-promoted-constructors
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-fields
                      -Wmissing-home-modules
                      -Wmissing-deriving-strategies
                      -Wpartial-fields
                      -Wredundant-constraints
                      -Wunused-packages
                      -Werror
                      -fshow-warning-groups
  hs-source-dirs:     src
  main-is:            Main.hs
  other-modules:      API.Article
                    , API.Comment
                    , API.Common
                    , API.Profile
                    , API.Tag
                    , API.UI
                    , API.User
                    , Model.Entities
                    , Model.Article
                    , Model.Comment
                    , Model.Profile
                    , Model.Tag
                    , Model.User
                    , Model.Common

